--- a/test.html
+++ b/test.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>プライバシーポリシー | 合同会社WaJu</title>
+  <title>ページタイトル | 合同会社WaJu</title>
 
   <!-- SEO / OGP -->
-  <meta name="description" content="合同会社WaJuのプライバシーポリシーを掲載しています。">
-  <meta property="og:title" content="プライバシーポリシー | 合同会社WaJu">
-  <meta property="og:description" content="合同会社WaJuのプライバシーポリシーを掲載しています。">
+  <meta name="description" content="ここにページごとの説明を記載します。">
+  <meta property="og:title" content="ページタイトル | 合同会社WaJu">
+  <meta property="og:description" content="ここにページごとの説明を記載します。">
   <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0001.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://waju.co.jp/privacy.html">
+  <meta property="og:url" content="https://waju.co.jp/">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png">
@@ -40,6 +40,7 @@
       color: #0f172a;
     }
     main {
+      padding: 2em;
       min-height: 60vh;
     }
     /* フッター固定用 */
@@ -86,118 +87,205 @@
 <body id="page-body">
   <header id="site-header"></header>
 
-  <main id="page-main">
-    <style>
-      .privacy-content {
-        line-height: 1.8;
-        color: #333;
-        font-size: 16px;
-      }
+<main id="page-main">
+  <style>
+    /* 見出しスタイル（会社概要／プライバシーポリシーと統一） */
+    #page-title {
+      font-size: 42px;
+      text-align: center;
+      margin-top: 40px;
+      margin-bottom: 60px;
+      font-weight: 900;
+      color: #1976d2;
+      letter-spacing: 2px;
+      position: relative;
+    }
+    #page-title::after {
+      content: '';
+      display: block;
+      width: 60px;
+      height: 3px;
+      background: #0f172a;
+      margin: 10px auto 0;
+      border-radius: 2px;
+    }
+    @media (max-width: 768px) {
       #page-title {
-        font-size: 42px;   /* PC表示用 */
-        text-align: center;
-        margin-top: 40px;
-        margin-bottom: 60px;
-        font-weight: 900;
-        color: #1976d2;
-        letter-spacing: 2px;
-        position: relative;
+        font-size: 26px;
+        letter-spacing: 1px;
+        margin-bottom: 40px;
       }
-      #page-title::after {
-        content: '';
-        display: block;
-        width: 60px;
-        height: 3px;
-        background: #0f172a;
-        margin: 10px auto 0;
-        border-radius: 2px;
-      }
-      /* スマホ表示で縮小 */
-      @media (max-width: 768px) {
-        #page-title {
-          font-size: 26px;
-          letter-spacing: 1px;
-          margin-bottom: 40px;
-        }
-      }
-      .privacy-content h2 {
-        margin: 40px 0 16px;
-        font-size: 1.5rem;
-        font-weight: 600;
-        color: #1976d2;
-        padding-bottom: 5px;
-        border-bottom: 1px dashed #bbdefb;
-      }
-      .privacy-content p {
-        margin: 0 0 24px;
-        text-align: justify;
-      }
-      .privacy-content ul {
-        margin: 0 0 24px 20px;
-        padding-left: 0;
-        list-style-type: none;
-      }
-      .privacy-content ul li {
-        position: relative;
-        padding-left: 20px;
-        margin-bottom: 8px;
-      }
-      .privacy-content ul li::before {
-        content: '・';
-        color: #1976d2;
-        position: absolute;
-        left: 0;
-        top: 0;
-        font-weight: bold;
-      }
-      .signature {
-        margin-top: 50px;
-        padding-top: 15px;
-        text-align: right;
-        font-weight: 700;
-        font-size: 1.1rem;
-        color: #555;
-        border-top: 1px solid #e0e0e0;
-      }
-      #page-content .container {
-        max-width: 900px;
-        margin: 0 auto;
-        padding: 0 20px;
-      }
-    </style>
+    }
 
-    <div id="page-content">
-      <div class="container privacy-content">
-        <h1 id="page-title">プライバシーポリシー</h1>
+    /* フォーム専用スタイル */
+    .contact-intro-text { text-align: center; margin-bottom: 20px; padding: 16px 20px; background: #f9fafb; border-radius: 8px; }
+    .privacy-notice { max-width: 800px; margin: 0 auto 20px; padding: 16px 20px; background: #f9fafb; border-radius: 8px; }
+    .form-container { max-width:800px; width:100%; margin:0 auto; }
+    .form-group { display:flex; align-items:flex-start; margin-bottom:20px; gap:24px; }
+    .form-group label { width:180px; font-weight:600; padding-top:12px; line-height:1.5; color:#1f2937; }
+    .form-group input,.form-group select,.form-group textarea { flex:1; padding:12px; border:1px solid #d1d5db; border-radius:8px; transition:border-color 0.2s, box-shadow 0.2s; }
+    .form-group input:focus,.form-group select:focus,.form-group textarea:focus { border-color:#3b82f6; outline:none; box-shadow:0 0 0 3px rgba(59,130,246,0.2); }
+    textarea { resize:vertical; height:140px; max-width:600px; }
+    .submit-btn { display:block; margin:30px auto 10px; padding:14px 36px; background:linear-gradient(180deg, #3b82f6, #1d4ed8); color:#fff; border:none; border-radius:10px; font-size:18px; font-weight:700; cursor:pointer; box-shadow:0 4px 10px rgba(29,78,216,0.3); transition:transform 0.15s ease, box-shadow 0.15s ease; }
+    .submit-btn:hover { background:linear-gradient(180deg, #60a5fa, #3b82f6); transform:translateY(-1px); box-shadow:0 6px 12px rgba(29,78,216,0.4); }
+    .msg { margin-top:20px; text-align:center; font-size:16px; }
+    .msg.success { color:#0a7f3f; }
+    .msg.error { color:#b91c1c; }
+    .hidden { display:none; }
+    .privacy { text-align:center; margin-top:20px; }
+    .privacy label { display:inline-block; }
+    .confirm-row { margin-bottom:12px; }
+    .confirm-label { font-weight:600; color:#1f2937; display:block; margin-bottom:4px; }
+    .confirm-value { padding:8px 12px; background:#f9fafb; border:1px solid #e5e7eb; border-radius:6px; }
+    .actions { display:flex; gap:16px; justify-content:center; margin-top:20px; }
+    @media (max-width:768px) {
+      .form-group { flex-direction:column; gap:8px; margin-bottom:15px; }
+      .form-group label { width:100%; margin-bottom:0; padding-top:0; }
+      .submit-btn { width:100%; padding:14px 20px; }
+    }
+  </style>
 
-        <p>合同会社WaJu（以下「当社」）は、個人情報保護の重要性を深く認識し、以下の方針に基づき個人情報の適切な取り扱いと保護に努めます。</p>
+  <div id="page-content">
+    <div class="container contact-content-area">
+      <h1 id="page-title">お問い合わせ</h1>
 
-        <h2>個人情報の管理</h2>
-        <p>当社は、お客様の個人情報を正確かつ最新の状態に保ち、不正アクセス・紛失・破損・改ざん・漏洩等を防止するため、セキュリティシステムの維持、管理体制の整備、社員教育の徹底を実施します。</p>
+      <!-- 入力フォーム -->
+      <form id="contact-form" novalidate>
+        <div class="form-container" id="form-section">
+          <div class="contact-intro-text">
+            <p>必須項目（<span style="color:red;">※</span>）をご記入の上、「確認画面へ」のボタンを押してください。</p>
+            <p>いただいた内容を確認でき次第、ご連絡させていただきます。</p>
+            <p>なお、営業メールにはご返信できない場合もございますのでご了承ください。</p>
+          </div>
 
-        <h2>個人情報の利用目的</h2>
-        <p>お預かりした個人情報は、当社からのご連絡、業務のご案内、ご質問への回答、電子メールや資料送付などの目的で利用いたします。</p>
+          <div class="form-group"><label for="name">お名前 <span style="color:red;">*</span></label><input id="name" name="name" type="text" required></div>
+          <div class="form-group"><label for="organization">所属</label><input id="organization" name="organization" type="text"></div>
+          <div class="form-group"><label for="email">メール <span style="color:red;">*</span></label><input id="email" name="email" type="email" required></div>
+          <div class="form-group"><label for="phone">電話番号</label><input id="phone" name="phone" type="tel"></div>
+          <div class="form-group"><label for="category">お問い合わせ種類 <span style="color:red;">*</span></label>
+            <select id="category" name="category" required>
+              <option value="">選択してください</option>
+              <option value="サービス導入相談">サービス導入相談</option>
+              <option value="業務提携・連携・協業">業務提携・連携・協業</option>
+              <option value="取材・メディア">取材・メディア</option>
+              <option value="その他">その他</option>
+            </select>
+          </div>
+          <div class="form-group"><label for="subject">件名 <span style="color:red;">*</span></label><input id="subject" name="subject" type="text" required></div>
+          <div class="form-group"><label for="message">本文 <span style="color:red;">*</span></label><textarea id="message" name="message" required></textarea></div>
 
-        <h2>個人情報の第三者提供</h2>
-        <p>当社は、以下の場合を除き、お客様の同意なく第三者へ個人情報を開示・提供することはありません。</p>
-        <ul>
-          <li>法令に基づき開示が必要な場合</li>
-          <li>お客様の同意がある場合</li>
-        </ul>
+          <div class="privacy-notice">
+            <p><strong>個人情報の収集について</strong></p>
+            <p>当サイトは、お客様の個人情報について、お客様の承諾が無い限り第三者に開示、提供を一切致しません。</p>
+            <p>お客様から個人情報をご提供して頂く際には、その利用目的を明示し、その目的以外には利用致しません。</p>
+            <p>そして、ご提供頂いた個人情報を取り扱うにあたり管理責任者を置き、適切な管理を行っております。</p>
+          </div>
 
-        <h2>安全対策</h2>
-        <p>個人情報の正確性および安全性を確保するために、最新のセキュリティ対策を講じています。</p>
+          <div class="privacy">
+            <label><input id="agree" name="agree" type="checkbox" required>
+              <a href="privacy.html" target="_blank" style="color:#1976d2; text-decoration:underline;">プライバシーポリシー</a>に同意します
+            </label>
+          </div>
 
-        <h2>ご本人からの照会</h2>
-        <p>お客様がご本人の個人情報の照会・修正・削除を希望される場合は、ご本人確認のうえで適切に対応いたします。</p>
+          <button type="button" class="submit-btn" id="submit-btn">確認画面へ</button>
+        </div>
+      </form>
 
-        <h2>法令の遵守と見直し</h2>
-        <p>当社は、適用される日本の法令や規範を遵守するとともに、本ポリシーを適宜見直し、改善に努めます。</p>
+      <!-- 確認画面 -->
+      <div id="confirm-section" class="form-container hidden">
+        <div class="confirm-row"><span class="confirm-label">お名前</span><div id="c-name" class="confirm-value"></div></div>
+        <div class="confirm-row"><span class="confirm-label">所属</span><div id="c-organization" class="confirm-value"></div></div>
+        <div class="confirm-row"><span class="confirm-label">メール</span><div id="c-email" class="confirm-value"></div></div>
+        <div class="confirm-row"><span class="confirm-label">電話番号</span><div id="c-phone" class="confirm-value"></div></div>
+        <div class="confirm-row"><span class="confirm-label">お問い合わせ種類</span><div id="c-category" class="confirm-value"></div></div>
+        <div class="confirm-row"><span class="confirm-label">件名</span><div id="c-subject" class="confirm-value"></div></div>
+        <div class="confirm-row"><span class="confirm-label">本文</span><div id="c-message" class="confirm-value"></div></div>
+        <div class="g-recaptcha" data-sitekey="6Le17NcrAAAAACXZT9WCPcjAv3wLsuceh-nIryuJ" style="margin-bottom:20px; display:flex; justify-content:center;"></div>
+        <div class="actions">
+          <button id="back-btn" class="submit-btn" type="button" style="background:#9ca3af">戻る</button>
+          <button id="send-btn" class="submit-btn" type="button">送信する</button>
+        </div>
+      </div>
 
-        <div class="signature">合同会社WaJu</div>
+      <!-- 完了画面 -->
+      <div id="thanks-section" class="form-container hidden">
+        <p class="msg success">送信ありがとうございました。<br>内容を確認の上、ご連絡いたします。<br>数秒後にトップページへ戻ります。</p>
       </div>
     </div>
-  </main>
+  </div>
+
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script type="module">
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+    const sb = createClient(
+      "https://htnmjsqgoapvuanrsuma.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+    );
+
+    const form = document.getElementById("contact-form");
+    const formSec = document.getElementById("form-section");
+    const confirmSec = document.getElementById("confirm-section");
+    const thanksSec = document.getElementById("thanks-section");
+
+    const cName = document.getElementById("c-name");
+    const cOrganization = document.getElementById("c-organization");
+    const cEmail = document.getElementById("c-email");
+    const cPhone = document.getElementById("c-phone");
+    const cCategory = document.getElementById("c-category");
+    const cSubject = document.getElementById("c-subject");
+    const cMessage = document.getElementById("c-message");
+
+    let payload = {};
+
+    document.getElementById("submit-btn").addEventListener("click", e => {
+      e.preventDefault();
+      if(!form.reportValidity()) return;
+
+      payload = {
+        name: document.getElementById("name").value.trim(),
+        organization: document.getElementById("organization").value.trim(),
+        email: document.getElementById("email").value.trim(),
+        phone: document.getElementById("phone").value.trim(),
+        category: document.getElementById("category").value,
+        subject: document.getElementById("subject").value.trim(),
+        message: document.getElementById("message").value.trim(),
+        agree: document.getElementById("agree").checked,
+        meta_user_agent: navigator.userAgent,
+        meta_path: location.pathname
+      };
+      cName.textContent = payload.name;
+      cOrganization.textContent = payload.organization || "-";
+      cEmail.textContent = payload.email;
+      cPhone.textContent = payload.phone || "-";
+      cCategory.textContent = payload.category;
+      cSubject.textContent = payload.subject;
+      cMessage.innerHTML = payload.message.replace(/\n/g, "<br>");
+
+      formSec.classList.add("hidden");
+      confirmSec.classList.remove("hidden");
+    });
+
+    document.getElementById("back-btn").addEventListener("click", ()=>{
+      confirmSec.classList.add("hidden");
+      formSec.classList.remove("hidden");
+    });
+
+    document.getElementById("send-btn").addEventListener("click", async ()=>{
+      const token = grecaptcha.getResponse();
+      if(!token){ alert("reCAPTCHAを完了してください。"); return; }
+      const { error } = await sb.from("contact_messages").insert(payload);
+      confirmSec.classList.add("hidden");
+      if(error){
+        alert("送信に失敗しました。時間をおいて再度お試しください。");
+        formSec.classList.remove("hidden");
+        return;
+      }
+      thanksSec.classList.remove("hidden");
+      setTimeout(()=>location.href="/index.html",5000);
+    });
+  </script>
+</main>
+
 
   <footer id="site-footer"></footer>
 
