--- a/index.html
+++ b/index.html
@@ -1,138 +1,162 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>合同会社WaJu | 公式サイト</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>合同会社WaJu | 公式ホームページ</title>
 
-  <!-- SEO -->
-  <meta name="description" content="合同会社WaJuの公式サイト。介護・福祉業界の課題を解決するCARELAYの紹介、会社概要や最新のお知らせを発信しています。">
-  <meta name="keywords" content="合同会社WaJu, CARELAY, 介護, 福祉, 求人, 営業, 地域連携">
-
-  <!-- OGP -->
-  <meta property="og:title" content="合同会社WaJu | 公式サイト">
-  <meta property="og:description" content="介護・福祉業界の課題を解決するCARELAYを中心に、社会貢献を目指すWaJuの公式サイト。">
+  <!-- SEO / OGP -->
+  <meta name="description" content="合同会社WaJuの公式ホームページです。介護・福祉業界のICT活用を推進し、CARELAYを中心としたサービスを提供しています。">
+  <meta property="og:title" content="合同会社WaJu | 公式ホームページ">
+  <meta property="og:description" content="合同会社WaJuの公式ホームページです。介護・福祉業界のICT活用を推進し、CARELAYを中心としたサービスを提供しています。">
   <meta property="og:image" content="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0001.png">
-  <meta property="og:url" content="https://waju.co.jp/">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://waju.co.jp/index.html">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png?v=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png?v=1">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png">
+  <link rel="apple-touch-icon" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png">
 
-  <!-- Tailwind -->
+  <!-- TailwindCSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <style>
-    body { margin:0; font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif; background:#fff; color:#0f172a; line-height:1.7; }
-    main { padding:2em 1em; min-height:60vh; }
-    section { margin:60px auto; }
-    h1 { font-size:36px; text-align:center; }
-    h2 { font-size:30px; text-align:center; font-weight:700; margin-bottom:1em; }
-    h3 { font-size:20px; font-weight:700; margin-bottom:10px; }
-    p { margin-bottom:1em; }
-    .topics ul { list-style:none; padding:0; }
-    .topics li { margin-bottom:12px; border-bottom:1px solid #e5e7eb; padding-bottom:8px; }
-    /* Heroスライド */
-    .carousel { position:relative; width:100%; height:400px; overflow:hidden; }
-    .carousel .slide { position:absolute; inset:0; opacity:0; transition:opacity 1s ease-in-out; }
-    .carousel .slide.active { opacity:1; }
-    .carousel img { width:100%; height:100%; object-fit:cover; }
-  </style>
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHLJ5K19ZE"></script>
   <script>
-    window.dataLayer=window.dataLayer||[];
+    window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date()); gtag('config', 'G-ZHLJ5K19ZE');
+    gtag('js', new Date());
+    gtag('config', 'G-ZHLJ5K19ZE');
   </script>
 </head>
-<body>
+<body id="page-body">
   <header id="site-header"></header>
 
-  <main>
+  <main id="page-main">
     <!-- Hero Section -->
-    <section id="hero">
-      <div class="carousel">
-        <div class="slide active"><img src="images/hero1.jpg" alt="Hero 1"></div>
-        <div class="slide"><img src="images/hero2.jpg" alt="Hero 2"></div>
-        <div class="slide"><img src="images/hero3.jpg" alt="Hero 3"></div>
+    <section id="hero" class="relative w-full overflow-hidden">
+      <div class="relative h-[70vh]">
+        <div class="absolute inset-0 flex transition-transform duration-700 ease-in-out">
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0001.png" alt="Hero1" class="w-full object-cover"/>
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0002.png" alt="Hero2" class="w-full object-cover"/>
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0003.png" alt="Hero3" class="w-full object-cover"/>
+        </div>
       </div>
     </section>
 
-    <!-- News Section -->
-    <section id="news">
-      <h2>お知らせ</h2>
-      <div class="topics">
-        <ul>
-          <li><a href="blog.html">【重要】ホームページをリニューアルしました</a></li>
-          <li><a href="blog.html">新サービス「CARELAY」の提供を開始しました。</a></li>
-          <li><a href="blog.html">夏季休業のお知らせとご協力のお願い</a></li>
-        </ul>
+    <!-- NEWS Section -->
+    <section id="news" class="py-16 bg-gray-50">
+      <div class="max-w-6xl mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-10">NEWS</h2>
+        <div class="space-y-4 max-w-2xl mx-auto">
+          <div class="flex justify-between border-b pb-2">
+            <span class="text-gray-500">2024.09.27</span>
+            <a href="#" class="text-blue-700 hover:underline">【重要】ホームページをリニューアルしました</a>
+          </div>
+          <div class="flex justify-between border-b pb-2">
+            <span class="text-gray-500">2024.09.01</span>
+            <a href="#" class="text-blue-700 hover:underline">新サービス「CARELAY」の提供を開始しました。</a>
+          </div>
+          <div class="flex justify-between border-b pb-2">
+            <span class="text-gray-500">2024.08.15</span>
+            <a href="#" class="text-blue-700 hover:underline">夏季休業のお知らせとご協力のお願い</a>
+          </div>
+          <div class="flex justify-between border-b pb-2">
+            <span class="text-gray-500">2023.04.01</span>
+            <a href="#" class="text-blue-700 hover:underline">合同会社WaJuを設立しました。</a>
+          </div>
+        </div>
       </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about">
-      <h2>会社概要</h2>
-      <p>社会福祉の一環として、介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い社会的支援ができる企業を目指しています。</p>
-      <p><a href="about.html">もっと詳しく見る →</a></p>
+    <!-- ABOUT Section -->
+    <section id="about" class="py-16">
+      <div class="max-w-6xl mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-10">ABOUT US</h2>
+        <div class="grid md:grid-cols-2 gap-8 items-center">
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0004.png" alt="About" class="rounded-lg shadow-md"/>
+          <div>
+            <h3 class="text-2xl font-semibold text-gray-800 mb-4">社会に貢献する、新たな価値創造へ</h3>
+            <p class="text-lg text-gray-700 leading-relaxed mb-4">
+              社会福祉の一環として、介護業界の時間的・金銭的負担を軽減する事業からスタートし、将来的には幅広い社会的支援ができる企業を目指しています。
+            </p>
+            <p class="text-lg text-gray-700 leading-relaxed mb-4">
+              絶えず前進するための <strong>Walk</strong>、そして躍進するための <strong>Jump</strong> を心掛け、社会に貢献していきます。
+            </p>
+            <a href="/about.html" class="inline-block px-6 py-3 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">詳しく見る</a>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <!-- Service Section -->
-    <section id="service">
-      <h2>事業内容</h2>
-      <p>高齢者介護サービス事業者や障害福祉サービス事業者の<b>求人・営業・連携</b>の問題をオンラインで解決するプラットフォームです。</p>
-      <p><a href="service.html">もっと詳しく見る →</a></p>
+    <!-- SERVICE Section -->
+    <section id="service" class="py-16 bg-gray-50">
+      <div class="max-w-6xl mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-10">SERVICE</h2>
+        <div class="grid md:grid-cols-2 gap-8 items-center">
+          <img src="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/wjhp0006.png" alt="Service" class="rounded-lg shadow-md"/>
+          <div>
+            <h3 class="text-2xl font-semibold text-gray-800 mb-4">介護・福祉業界の課題をオンラインで解決「CARELAY（ケアレイ）」</h3>
+            <p class="text-lg text-gray-700 leading-relaxed mb-4">
+              高齢者介護サービス事業者や障害福祉サービス事業者の求人・営業・連携の問題をオンラインで解決するプラットフォームです。
+            </p>
+            <p class="text-lg text-gray-700 leading-relaxed mb-4">
+              このサービスは、業界の持続可能な発展をサポートするため、他にはない圧倒的な低コストでご提供しています。
+            </p>
+            <p class="text-xl font-bold text-blue-700 mb-4">圧倒的な低コスト「5,500円」</p>
+            <a href="/service.html" class="inline-block px-6 py-3 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">詳しく見る</a>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <!-- YouTube Section -->
-    <section id="youtube">
-      <h2>動画紹介</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/xxxxx" frameborder="0" allowfullscreen></iframe>
+    <!-- VIDEO Section -->
+    <section id="video" class="py-16">
+      <div class="max-w-6xl mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-10">YouTube</h2>
+        <div class="grid md:grid-cols-2 gap-8">
+          <iframe class="w-full h-[300px] rounded-lg shadow" src="https://www.youtube.com/embed/CjgbFC64qOk" title="会社概要動画" frameborder="0" allowfullscreen></iframe>
+          <iframe class="w-full h-[300px] rounded-lg shadow" src="https://www.youtube.com/embed/WqQh-Ok9kjo" title="サービス概要動画" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
     </section>
 
     <!-- SNS Section -->
-    <section id="sns">
-      <h2>SNS</h2>
-      <p>最新投稿の埋め込みエリア（今後改修予定）</p>
-      <ul>
-        <li><a href="https://x.com/waju_corp">X公式</a></li>
-        <li><a href="https://instagram.com/waju_official">Instagram公式</a></li>
-      </ul>
+    <section id="sns" class="py-16 bg-gray-50">
+      <div class="max-w-6xl mx-auto px-6 text-center">
+        <h2 class="text-3xl font-bold text-blue-800 mb-10">SNS</h2>
+        <div class="grid md:grid-cols-2 gap-8">
+          <div class="bg-white p-4 rounded shadow">
+            <h3 class="font-semibold mb-2">Instagram @waju_official</h3>
+            <p>最新投稿の埋め込みエリア</p>
+          </div>
+          <div class="bg-white p-4 rounded shadow">
+            <h3 class="font-semibold mb-2">X（旧Twitter） @waju_corp</h3>
+            <p>最新投稿の埋め込みエリア</p>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <!-- Company Info Section -->
-    <section id="company-info">
-      <h2>会社情報</h2>
-      <p>
-        会社名：合同会社WaJu<br>
-        代表社員：大野 洋<br>
-        所在地：〒658-0052 兵庫県神戸市東灘区住吉東町2丁目7-20-102<br>
-        設立：2023年4月<br>
-        連絡先：<a href="mailto:info@waju.co.jp">info@waju.co.jp</a>
-      </p>
-      <p><a href="contact.html">お問い合わせはこちら</a></p>
+    <!-- COMPANY Section -->
+    <section id="company" class="py-16">
+      <div class="max-w-6xl mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-10">COMPANY</h2>
+        <table class="w-full max-w-3xl mx-auto border border-gray-200">
+          <tbody>
+            <tr class="border-b border-gray-200"><th class="text-left p-4 bg-gray-100 w-1/3">会社名</th><td class="p-4">合同会社WaJu</td></tr>
+            <tr class="border-b border-gray-200"><th class="text-left p-4 bg-gray-100">代表社員</th><td class="p-4">大野 洋</td></tr>
+            <tr class="border-b border-gray-200"><th class="text-left p-4 bg-gray-100">所在地</th><td class="p-4">〒658-0052 兵庫県神戸市東灘区住吉東町2丁目7-20-102</td></tr>
+            <tr class="border-b border-gray-200"><th class="text-left p-4 bg-gray-100">連絡先</th><td class="p-4"><a href="mailto:info@waju.co.jp" class="text-blue-700 hover:underline">info@waju.co.jp</a></td></tr>
+            <tr><th class="text-left p-4 bg-gray-100">設立</th><td class="p-4">2023年4月</td></tr>
+          </tbody>
+        </table>
+      </div>
     </section>
   </main>
 
   <footer id="site-footer"></footer>
-
-  <!-- ヘッダー／フッター -->
   <script type="module" src="hf.js"></script>
-
-  <!-- Heroスライド切替 -->
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const slides=document.querySelectorAll(".carousel .slide");
-      let idx=0;
-      setInterval(()=>{
-        slides[idx].classList.remove("active");
-        idx=(idx+1)%slides.length;
-        slides[idx].classList.add("active");
-      },5000);
-    });
-  </script>
 </body>
 </html>
